fix: 그래프 API에 예상요금 삭제, 예상요금 API cost 0인 경우 필터링 추가